Fix map appearing too wide on desktop

--- a/src/elements/govuk/layout/style.scss
+++ b/src/elements/govuk/layout/style.scss
@@ -45,6 +45,9 @@
 .column-flip {
   > [class*="column-"] {
     float: right;
-    width: 100%;
+
+    @include media(mobile) {
+      width: 100%;
+    }
   }
 }
